# cluster-explain

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml  codeql-analysis.yml  test-release.yml
docs/source/: Quickstart.ipynb  conf.py  errors.rst  explainers.rst  explanation_results.rst  index.rst  installation.rst  metrics.rst  utilities.rst
notebooks/: Cleaned_Explainable k-Medoids.ipynb  Evaluation.ipynb  Explainable k-Medoids.ipynb  LRP.ipynb  datasets.py  example.ipynb  gradient.ipynb  imputer.py  plotting_importances.ipynb  shap.ipynb  trees.ipynb  xkm.ipynb
src/cxplain/: __init__.py  base_explainer.py  errors.py  gradient.py  metrics.py  neon.py  shap.py  tree.py  util.py  version.py  xkm.py
src/cxplain/res/: default.conf
tests/unit/: test_metrics.py  test_util.py  test_xkm.py
