[tool.poetry]
name = "cxplain"
version = "0.1.0"
description = "Provide feature relevance scores fo clustering."
authors = ["Alexander Fottner <alexander.fottner@uni-a.de>"]
license = "Proprietary"
packages = [
    { include = "cxplain", from = "src" },
]
include = ["src/cxplain/res/*"]

[tool.poetry.dependencies]
python = "^3.7"
pyhocon = "^0.3.54"
importlib-metadata = {version = "^1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pre-commit = "^2.2.0"
pytest = "^5.4.0"
pytest-cov = "^2.8.0"
jupyterlab = "^3.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
