[project]
name = "clusterxplain"
version = "0.1.0"

[tool.poetry]
name = "clusterxplain"
version = "0.1.0"
description = "Provide feature relevance scores fo clustering."
authors = ["Alexander Fottner <alexander.fottner@uni-a.de>", "Jonathan Pfahler"]
license = "LICENSE"
packages = [
    { include = "cxplain", from = "src" },
]
include = ["src/cxplain/res/*"]
readme = "README.md"

[project.urls]
Documentation = "https://readthedocs.org/projects/cluster-explain/"
Repository = "https://github.com/AlexF1994/cluster-explain"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.8"
pyhocon = "^0.3.54"
importlib-metadata = {version = "^1.0", python = "<3.8"}
matplotlib = "^3.6.0"
scikit-learn = "^1.1.2"
pandas = "^1.5.0"
nptyping = "^2.3.1"
shap = "^0.41.0"
ExKMC = "^0.0.3"
seaborn = "^0.12.2"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pre-commit = "^2.2.0"
pytest = "^5.4.0"
pytest-cov = "^2.8.0"
jupyterlab = "^3.0.5"
bandit = "^1.7.4"
mypy = "^0.981"
isort = "^5.10.1"
ipykernel = "^6.16.0"
ruff = "^0.0.270"
pywin32 = {version = "300", platform = "win32"}
twine = "4.0.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "*"
nbsphinx = "^0.9.3"
sphinxcontrib-bibtex = "^2.6.1"
sphinx-codeautolink = "^0.15.0"
furo = "*"

[tool.ruff]
line-length = 120
ignore = ["F821"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
target-version = "py39"

[tool.ruff.pycodestyle]
max-doc-length = 180

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
